# Springboard_phishing_url

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
phishing_url/: __init__.py  dataset.py  features.py  plots.py
phishing_url/modeling/: predict.py  train.py
